--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "license": "MIT",
   "type": "module",
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "start2": "node index2.js"
   },
   "dependencies": {
     "puppeteer": "^14.4.1"
